--- a/nodolist/templates/nodolist/base.html
+++ b/nodolist/templates/nodolist/base.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-xl navbar-dark bg-dark" style="-webkit-user-select: auto;">
         <div class="container-fluid" style="-webkit-user-select: auto;">
-          <a class="navbar-brand" href="{% url toppage %}" style="-webkit-user-select: auto;">Nodolist</a>
+          <a class="navbar-brand" href="{% url 'nodolist:toppage' %}" style="-webkit-user-select: auto;">Nodolist</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDark" aria-controls="navbarDark" aria-expanded="false" aria-label="Toggle navigation" style="-webkit-user-select: auto;">
             <span class="navbar-toggler-icon" style="-webkit-user-select: auto;"></span>
           </button>
